cards overflow fixed

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 20px;
+    margin-right: 20rem;
     overflow-x: hidden;
 }
 
@@ -196,5 +197,9 @@
 @media (max-width: 768px){
     .empty{
         left: 0;
+    }
+
+    .cards{
+        margin-right: 0;
     }
 }
