--- a/src/pages/Profile/Posts.module.css
+++ b/src/pages/Profile/Posts.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .card{
